# foods

./: .gitignore  README.md  compose.yaml  pubspec.yaml  support.js  饮食生活App_系统架构与技术选型.md  饮食生活App_需求设计文档PRD.md  饮食生活助手-桌面版.dc.html  饮食生活助手.dc.html
server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
server/docker/postgres/: init-test-db.sql
server/migrations/: README  env.py
server/migrations/versions/: 20260720_0001_identity_profiles.py  20260720_0002_records_sync.py  20260720_0003_recognition.py  20260720_0004_recognition_incoming_cleanup.py  20260721_0005_account_object_cleanup.py
server/scripts/: export_openapi.py  smoke_api.py
server/src/ordin/: __init__.py
server/src/ordin/api/: account_schemas.py  dependencies.py  errors.py  main.py  openapi.py  recognition_schemas.py  record_schemas.py  router.py  run.py  schemas.py
server/tests/: __init__.py  conftest.py  helpers.py
server/tests/contract/: test_account_openapi_shapes.py  test_openapi.py  test_record_openapi_shapes.py
server/tests/integration/: test_account_privacy_api.py  test_auth_api.py  test_external_services.py  test_health.py  test_recognition_api.py  test_recognition_external.py  test_records_api.py  test_users_api.py
server/tests/unit/: test_api_runner.py  test_celery_dispatcher.py  test_image_processing.py  test_otp_webhook_sender.py  test_recognition_provider.py  test_recognition_schemas.py  test_recognition_service.py  test_recognition_tasks.py  test_recognition_worker.py  test_record_schemas.py  test_records_service.py  test_security_config.py
(+233 files in other folders)
