[project]
name = "ordin-server"
version = "0.1.0"
description = "Backend API for the Ordin food and fasting application."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.5,<1.19",
    "fastapi[standard]>=0.139,<0.140",
    "httpx>=0.28,<1",
    "psycopg[binary]>=3.3,<4",
    "pydantic-settings>=2.12,<3",
    "pyjwt>=2.10,<3",
    "redis>=7,<8",
    "sqlalchemy[asyncio]>=2.0.51,<2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project.scripts]
ordin-api = "ordin.api.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ordin"]

[tool.fastapi]
entrypoint = "ordin.api.main:app"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "external: requires the Docker PostgreSQL and Redis development dependencies",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
